[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "dplinknet"
version = "1.0.0"
description = "DP-LinkNet: A convolutional network for historical document image binarization"
requires-python = ">=3.6.10"
dependencies = [
    "torch>=1.7.1",
    "torchvision>=0.8.2",
]

[project.optional-dependencies]
all = ["opencv-python>=4.6.0"]
